refactor(servlet): migrate server layer to IndexStore and SearchEngine