@@ -1,44 +1,36 @@
 package com.cse.server.servlet;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-import com.cse.index.InvertedIndex.SearchResult;
-import com.cse.index.ThreadSafeInvertedIndex;
-import com.cse.stem.FileStemmer;
+import com.cse.index.SearchHit;
+import com.cse.index.SearchOptions;
+import com.cse.search.SearchEngine;
 
-import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
-public class SearchServlet extends HttpServlet {
+public class SearchServlet extends BaseServlet {
 	private static final long serialVersionUID = 1L;
-
-	private final ThreadSafeInvertedIndex index;
-
-	public SearchServlet(ThreadSafeInvertedIndex index) {
-		this.index = index;
-	}
 
 	@Override
 	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws IOException {
 		String q = req.getParameter("q");
-		boolean partial = Boolean.parseBoolean(req.getParameter("partial"));
+		boolean partial = parseBool(req.getParameter("partial"), false);
 		int limit = parseInt(req.getParameter("limit"), 0);
 
 		if (q == null || q.isBlank()) {
-			writeJson(resp, q, partial, Collections.emptyList());
+			writeJson(resp, q, partial, List.of());
 			return;
 		}
 
-		Set<String> stems = FileStemmer.uniqueStems(q);
-		List<SearchResult> results = partial ? index.partialIndex(stems) : index.exactIndex(stems);
-
+		SearchOptions options = new SearchOptions(
+				limit > 0 ? limit : SearchOptions.DEFAULT_LIMIT, 0, false, false);
+		var response = app().searchEngine().search(
+				SearchEngine.parseQuery(q, partial), options, null);
+		List<SearchHit> results = response.results();
 		if (limit > 0 && results.size() > limit) {
-			results = new ArrayList<>(results.subList(0, limit));
+			results = results.subList(0, limit);
 		}
 
 		writeJson(resp, q, partial, results);
@@ -52,7 +44,7 @@ public class SearchServlet extends HttpServlet {
 		}
 	}
 
-	private static void writeJson(HttpServletResponse resp, String query, boolean partial, List<SearchResult> results)
+	private static void writeJson(HttpServletResponse resp, String query, boolean partial, List<SearchHit> results)
 			throws IOException {
 		resp.setStatus(HttpServletResponse.SC_OK);
 		resp.setContentType("application/json; charset=UTF-8");
@@ -64,14 +56,14 @@ public class SearchServlet extends HttpServlet {
 		out.append("\"results\":[");
 
 		for (int i = 0; i < results.size(); i++) {
-			SearchResult r = results.get(i);
+			SearchHit r = results.get(i);
 			if (i > 0) {
 				out.append(",");
 			}
 			out.append("{");
-			out.append("\"where\":").append(toJsonString(r.getLocation())).append(",");
-			out.append("\"count\":").append(r.getMatches()).append(",");
-			out.append("\"score\":").append(String.format(java.util.Locale.US, "%.8f", r.getScore()));
+			out.append("\"where\":").append(toJsonString(r.location())).append(",");
+			out.append("\"count\":").append(r.matchCount()).append(",");
+			out.append("\"score\":").append(String.format(java.util.Locale.US, "%.8f", r.score()));
 			out.append("}");
 		}
 
@@ -108,4 +100,3 @@ public class SearchServlet extends HttpServlet {
 		return b.toString();
 	}
 }
-
